--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
@@ -23,12 +24,16 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
