--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
+    "sass": "^1.65.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.15",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.28",
+    "postcss-import": "^15.1.0",
     "prettier": "^3.0.1",
     "tailwindcss": "^3.3.3"
   }
