--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "sass": "^1.65.1",
+    "swr": "^2.2.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
