--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "semi": true,
-    "tabWidth": 2,
-    "printWidth": 100,
-    "arrowParens": "avoid"
-  }
-  
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "bracketSpacing": true
+}
