--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@prisma/client": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
@@ -26,16 +26,19 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
-    "sass": "^1.65.1",
-    "typescript": "5.1.6"
+    "sass": "^1.65.1"
   },
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "autoprefixer": "^10.4.15",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.1",
-    "tailwindcss": "^3.3.3"
+    "prisma": "^5.2.0",
+    "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
