--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@prisma/client": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -40,6 +41,9 @@
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "prisma": "^5.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
