Login paga and Next-Auth added

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="postgresql://postgres:%21Q.2w.%23E.4r@localhost:5432/kliktermin"
 # dbpass: !Q.2w.#E.4r
+
+NEXTAUTH_RUL=http://localhost:3000
+NEXTAUTH_SECRET=j@938kdDFVh.388*74@*#javDXX8I#@#
