--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
-    "@prisma/client": "^5.11.0",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -20,11 +21,12 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "react": "18.2.0",
+    "eslint-config-next": "^14.2.1",
+    "next": "^14.2.1",
+    "next-auth": "^4.24.7",
+    "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "redux-thunk": "^2.4.2",
@@ -41,8 +43,8 @@
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.1",
-    "tailwindcss": "^3.3.3",
     "prisma": "^5.11.0",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
