--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.7",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "eslint": "8.46.0",
@@ -35,6 +36,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.5.9",
     "autoprefixer": "^10.4.15",
     "dotenv": "^16.3.1",
