--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/calendar/CalendarTable.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/components/calendar/CalendarTable.js",
+    "app/components/ui/Icons"
+  ],
   "exclude": ["node_modules"]
 }
