--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:%21Q.2w.%23E.4r@localhost:5432/kliktermin"
+
 # dbpass: !Q.2w.#E.4r
 
 NEXTAUTH_RUL=http://localhost:3000
 NEXTAUTH_SECRET=j@938kdDFVh.388*74@*#javDXX8I#@#
+#NEXTAUTH_SECRET=ptPostgress202020+pt
