--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start -p 3003",
     "lint": "next lint",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "seed": "ts-node -r tsconfig-paths/register ./prisma/seed/seedLogic.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.2.17",
@@ -24,7 +25,6 @@
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.1",
     "next": "^14.2.1",
-    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
@@ -32,8 +32,7 @@
     "react-redux": "^8.1.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.65.1",
-    "swr": "^2.2.2",
-    "typescript": "5.1.6"
+    "swr": "^2.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -45,9 +44,10 @@
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.1",
-    "prisma": "^5.11.0",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.2"
   }
 }
