--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start -p 3003",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "seed": "ts-node -r tsconfig-paths/register ./prisma/seed/seedLogic.ts"
+    "seed": "ts-node -r tsconfig-paths/register ./prisma/seed/logic.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "animate.css": "^4.1.1",
